devops/spring-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          image: firstapp:v1
          imagePullPolicy: Never #To disable pulling the image from minikube online artifactory.
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: web-secret
              mountPath: "/secrets/web"
              readOnly: true
      volumes:
       - name : web-secret
         secret:
           secretName: my-secret
---
apiVersion: v1
kind: Service
metadata:
  name: spring-app-service
spec:
  type: LoadBalancer
  selector:
    app: spring-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
